--- a/app/class-environment.html
+++ b/app/class-environment.html
@@ -9,7 +9,7 @@ current: index
 
 <div class="container mb-9">
     <div class="row">
-        <div class="col-8">
+        <div class="col-12 col-sm-8">
             <div class="row">
                 <div class="col" data-aos="fade-right">
                     <div class="card bg-transparent text-white environment-card bg-cover rounded-lg mb-5"
@@ -24,7 +24,7 @@ current: index
                 </div>
             </div>
             <div class="row">
-                <div class="col-6" data-aos="fade-right">
+                <div class="col-12 col-sm-6" data-aos="fade-right">
                     <div class="card bg-transparent text-white environment-card bg-cover rounded-lg mb-5"
                         style="background-image: url(./assets/images/woman\ doing\ yoga.jpg);">
                         <div class="card-img-overlay d-flex align-items-end">
@@ -35,7 +35,7 @@ current: index
                         </div>
                     </div>
                 </div>
-                <div class="col-6" data-aos="fade-left">
+                <div class="col-12 col-sm-6" data-aos="fade-left">
                     <div class="card bg-transparent text-white environment-card bg-cover rounded-lg mb-5"
                         style="background-image: url(./assets/images/white\ ceramic\ sink\ near\ white\ ceramic\ sink.jpg);">
                         <div class="card-img-overlay d-flex align-items-end">
@@ -48,7 +48,7 @@ current: index
                 </div>
             </div>
             <div class="row">
-                <div class="col-6" data-aos="fade-right">
+                <div class="col-12 col-sm-6" data-aos="fade-right">
                     <div class="card bg-transparent text-white environment-card bg-cover rounded-lg mb-5"
                         style="background-image: url(./assets/images/woman\ in\ black\ sports\ bra\ and\ blue\ denim\ jeans\ doing\ yoga.jpg);">
                         <div class="card-img-overlay d-flex align-items-end">
@@ -59,7 +59,7 @@ current: index
                         </div>
                     </div>
                 </div>
-                <div class="col-6" data-aos="fade-left">
+                <div class="col-12 col-sm-6" data-aos="fade-left">
                     <div class="card bg-transparent text-white environment-card bg-cover rounded-lg mb-5"
                         style="background-image: url(./assets/images/sittin\ people\ beside\ table\ inside\ room.jpg);">
                         <div class="card-img-overlay d-flex align-items-end">
@@ -72,7 +72,7 @@ current: index
                 </div>
             </div>
         </div>
-        <div class="col-4" data-aos="fade-left">
+        <div class="col-12 col-sm-4" data-aos="fade-left">
             <div class="card border-0 bg-beige text-dark-brick-red rounded-lg p-3 p-lg-6">
                 <div class="card-body">
                     <h5 class="mb-3">DOYOGA 提供：</h5>
