--- a/app/class-introduction.html
+++ b/app/class-introduction.html
@@ -9,12 +9,12 @@ current: index
 
 <div class="container special-class mb-9">
     <div class="row" data-aos="fade-up">
-        <div class="offset-lg-1 col-6">
+        <div class="offset-lg-1 col-12 col-sm-6 mb-2 mb-sm-0">
             <div class="card-img bg-cover rounded-lg"
                 style="background-image: url(./assets/images/photo-1540206276207-3af25c08abc4.jpeg);">
             </div>
         </div>
-        <div class="col-6 col-lg-4">
+        <div class="col-12 col-sm-6 col-lg-4">
             <h3 class="text-dark-brick-red">本月限定課程 - 空中瑜珈</h3>
             <div class="d-flex align-items-baseline mb-3">
                 <h6 class="text-brick-red me-2">授課老師：Carol Tang</h6>
@@ -37,7 +37,7 @@ current: index
 <div class="class-select bg-brick-red py-3" data-aos="fade-up">
     <div class="container">
         <div class="row">
-            <div class="col-5 col-lg-4">
+            <div class="col-8 col-sm-5 col-lg-4">
                 <div class="input-group">
                     <input type="text" class="form-control" placeholder="請輸入要搜尋的課程" aria-label="Username"
                         aria-describedby="basic-addon1">
@@ -66,7 +66,7 @@ current: index
         <div class="row">
             <div class="col-12 col-lg-9">
                 <div class="row">
-                    <div class="col-6 col-lg-7" data-aos="fade-up" data-aos-delay="200">
+                    <div class="col-12 col-sm-6 col-lg-7" data-aos="fade-up" data-aos-delay="200">
                         <a href="#" data-bs-toggle="modal" role="button" data-bs-target="#exampleModal">
                             <div class="card bg-transparent text-white class-card bg-cover rounded-lg mb-5"
                                 style="background-image: url(./assets/images/woman\ doing\ yoga\ beside\ wall.jpg);">
@@ -79,10 +79,10 @@ current: index
                             </div>
                         </a>
                     </div>
-                    <div class="col-6 col-lg-5" data-aos="fade-up" data-aos-delay="100">
+                    <div class="col-12 col-sm-6 col-lg-5" data-aos="fade-up" data-aos-delay="100">
                         <a href="#">
                             <div class="card bg-transparent text-white class-card bg-cover rounded-lg mb-5"
-                                style="background-image: url(./assets/images/woman\ in\ black\ sports\ bra\ and\ black\ leggings\ doing\ yoga.jpg);">
+                                style="background-image: url(./assets/images/rawan-yasser-zQ1ypq-WHzQ-unsplash.jpg);">
                                 <div class="card-img-overlay d-flex align-items-end">
                                     <div class="card-text p-4 mt-auto">
                                         <h3 class="m-0">艾揚格 Iyengar</h3>
@@ -94,7 +94,7 @@ current: index
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-6 col-lg-5" data-aos="fade-up" data-aos-delay="100">
+                    <div class="col-12 col-sm-6 col-lg-5" data-aos="fade-up" data-aos-delay="100">
                         <a href="#">
                             <div class="card bg-transparent text-white class-card bg-cover rounded-lg mb-5"
                                 style="background-image: url(./assets/images/woman\ in\ black\ sports\ bra\ and\ black\ leggings\ doing\ yoga.jpg);">
@@ -107,7 +107,7 @@ current: index
                             </div>
                         </a>
                     </div>
-                    <div class="col-6 col-lg-7" data-aos="fade-up" data-aos-delay="200">
+                    <div class="col-12 col-sm-6 col-lg-7" data-aos="fade-up" data-aos-delay="200">
                         <a href="#">
                             <div class="card bg-transparent text-white class-card bg-cover rounded-lg mb-5"
                                 style="background-image: url(./assets/images/woman\ in\ white\ tank\ top\ and\ white\ leggings\ bending\ her\ body.jpg);">
@@ -122,7 +122,7 @@ current: index
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-6 col-lg-7" data-aos="fade-up" data-aos-delay="200">
+                    <div class="col-12 col-sm-6 col-lg-7" data-aos="fade-up" data-aos-delay="200">
                         <a href="#">
                             <div class="card bg-transparent text-white class-card bg-cover rounded-lg mb-5"
                                 style="background-image: url(./assets/images/two\ woman\ dong\ fitness\ exercise.jpg);">
@@ -135,7 +135,7 @@ current: index
                             </div>
                         </a>
                     </div>
-                    <div class="col-6 col-lg-5" data-aos="fade-up" data-aos-delay="100">
+                    <div class="col-12 col-sm-6 col-lg-5" data-aos="fade-up" data-aos-delay="100">
                         <a href="#">
                             <div class="card bg-transparent text-white class-card bg-cover rounded-lg mb-5"
                                 style="background-image: url(./assets/images/woman\ doing\ yoga.jpg);">
@@ -150,7 +150,7 @@ current: index
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-6 col-lg-5" data-aos="fade-up" data-aos-delay="100">
+                    <div class="col-12 col-sm-6 col-lg-5" data-aos="fade-up" data-aos-delay="100">
                         <a href="#">
                             <div class="card bg-transparent text-white class-card bg-cover rounded-lg mb-5"
                                 style="background-image: url(./assets/images/woman\ in\ white\ tank\ top\ and\ white\ pants\ bending\ her\ body\ by\ the\ window.jpg);">
@@ -163,7 +163,7 @@ current: index
                             </div>
                         </a>
                     </div>
-                    <div class="col-6 col-lg-7" data-aos="fade-up" data-aos-delay="200">
+                    <div class="col-12 col-sm-6 col-lg-7" data-aos="fade-up" data-aos-delay="200">
                         <a href="#">
                             <div class="card bg-transparent  text-white class-card bg-cover rounded-lg mb-5"
                                 style="background-image: url(./assets/images/carl-barcelo-nqUHQkuVj3c-unsplash.jpg);">
@@ -178,7 +178,7 @@ current: index
                     </div>
                 </div>
             </div>
-            <div class="offset-3 offset-lg-0 col-6 col-lg-3" data-aos="fade-up">
+            <div class="offset-sm-3 offset-lg-0 col-12 col-sm-6 col-lg-3" data-aos="fade-up">
                 <div class="d-flex flex-column align-items-center">
                     <h5 class="text-dark-brick-red">DOYOGA 上課須知：</h5>
                     <ul class="text-dark-brick-red list-unstyled">
@@ -211,12 +211,96 @@ current: index
         <div class="container">
             <div class="row">
                 <!-- Swiper -->
-                <div class="swiper mySwiper swiper-initialized swiper-horizontal swiper-pointer-events"
-                    style="padding: 40px 0 113px 0;">
-                    <div class="swiper-wrapper" id="swiper-wrapper-f5510a3e65fd61cd7" aria-live="polite"
-                        style="transition-duration: 0ms; transform: translate3d(0px, 0px, 0px); ">
-                        <div class="swiper-slide swiper-slide-active" role="group" aria-label="1 / 4"
-                            style="width: 350px; margin-right: 30px;" data-aos="fade-right">
+                <div class="d-none d-sm-block">
+                    <div class="swiper mySwiper swiper-initialized swiper-horizontal swiper-pointer-events"
+                        style="padding: 40px 0 113px 0;">
+                        <div class="swiper-wrapper" id="swiper-wrapper-f5510a3e65fd61cd7" aria-live="polite"
+                            style="transition-duration: 0ms; transform: translate3d(0px, 0px, 0px); ">
+                            <div class="swiper-slide swiper-slide-active" role="group" aria-label="1 / 4"
+                                style="width: 350px; margin-right: 30px;" data-aos="fade-right">
+                                <div class="card border-0 mt-4 h-100">
+                                    <div
+                                        class="card-body bg-brick-red text-white px-4 pt-9 pb-4 rounded-lg position-relative">
+                                        <div class="card-photo bg-cover border border-brick-red border-5"
+                                            style="background-image: url(./assets/images/teacher-1.png);"></div>
+                                        <h5 class="card-title mb-3 text-center">Carol Tang 老師</h5>
+                                        <h6 class="card-subtitle mb-3 text-center">教學經歷 10 年</h6>
+                                        <h6 class="mb-3">“因為瑜珈讓我重新認識自己的身體，也讓我有了不一樣的人生。 我希望能跟學生們分享瑜珈的好，讓大
+                                            家能藉由瑜珈看見自己的內在與潛能，
+                                            並將瑜珈自然的融入自己的生活中。”</h6>
+                                        <ul>
+                                            <li class="mb-1">協會認證艾揚格瑜珈老師</li>
+                                            <li class="mb-1">2010 年完成四年的艾揚格師資培訓</li>
+                                            <li>2020 取得艾揚格瑜珈高階認證</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide swiper-slide-next" role="group" aria-label="2 / 4"
+                                style="width: 350px; margin-right: 30px;" data-aos="fade-right" data-aos-delay="100">
+                                <div class="card border-0 mt-4 h-100">
+                                    <div
+                                        class="card-body bg-dark-brick-red text-white px-4 pt-9 pb-4 rounded-lg position-relative">
+                                        <div class="card-photo bg-cover border border-brick-red border-5"
+                                            style="background-image: url(./assets/images/teacher-2.png);"></div>
+                                        <h5 class="card-title mb-3 text-center">Kanae 老師</h5>
+                                        <h6 class="card-subtitle mb-3 text-center">教學經歷 3 年</h6>
+                                        <h6 class="mb-3">
+                                            “希望每個人透過觀察，感受在在進入動作，連接陰與陽，內和外，呼和吸的方式來更了解瑜珈練習的觀點，每個​動作都帶著呼吸和順位，在平衡心理和生理的狀況下以安全和簡化的技巧進入瑜珈姿勢，帶著放鬆的心情，享受瑜珈和生命的喜悅，並樂在其​中。”
+                                        </h6>
+                                        <ul>
+                                            <li class="mb-1">美國瑜珈聯盟 RYT200 小時師資認證</li>
+                                            <li class="mb-1">自然呼吸瑜珈會館開授倒立研習</li>
+                                            <li>簡善琳瑜珈會館開授倒立研習</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide" role="group" aria-label="3 / 4"
+                                style="width: 350px; margin-right: 30px;" data-aos="fade-right" data-aos-delay="300">
+                                <div class="card border-0 mt-4 h-100">
+                                    <div
+                                        class="card-body bg-brick-red text-white px-4 pt-9 pb-4 rounded-lg position-relative">
+                                        <div class="card-photo bg-cover border border-brick-red border-5"
+                                            style="background-image: url(./assets/images/teacher-4.png);"></div>
+                                        <h5 class="card-title mb-3 text-center">Kuzuha 老師</h5>
+                                        <h6 class="card-subtitle mb-3 text-center">教學經歷 3 年</h6>
+                                        <h6 class="mb-3">“瑜珈是一種生活態度， 學習平衡不強求，堅持不放棄， 修煉心靈活在當下。”</h6>
+                                        <ul>
+                                            <li class="mb-1">美國瑜珈聯盟 RYT200 小時師資認證</li>
+                                            <li class="mb-1">自然呼吸瑜珈會館開授倒立研習</li>
+                                            <li>簡善琳瑜珈會館開授倒立研習</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide" role="group" aria-label="4 / 4"
+                                style="width: 350px; margin-right: 30px;" data-aos="fade-right" data-aos-delay="400">
+                                <div class="card border-0 mt-4 h-100">
+                                    <div
+                                        class="card-body bg-brick-red text-white px-4 pt-9 pb-4 rounded-lg position-relative">
+                                        <div class="card-photo bg-cover border border-brick-red border-5"
+                                            style="background-image: url(./assets/images/teacher-3.png);"></div>
+                                        <h5 class="card-title mb-3 text-center">Asa Ifrit 老師</h5>
+                                        <h6 class="card-subtitle mb-3 text-center">教學經歷 5 年</h6>
+                                        <h6 class="mb-3">“因為瑜珈讓我重新認識自己的身體，也讓我有了不一樣的人生。 我希望能跟學生們分享瑜珈的好，讓大
+                                            家能藉由瑜珈看見自己的內在與潛能，
+                                            並將瑜珈自然的融入自己的生活中。”</h6>
+                                        <ul>
+                                            <li class="mb-1">美國瑜珈聯盟 RYT200 小時師資認證</li>
+                                            <li>AshtangsTTC50小時認證</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+                    </div>
+                </div>
+                <div class="d-sm-none">
+                    <div class="row">
+                        <div class="col-12 mb-9" data-aos="fade-up">
                             <div class="card border-0 mt-4 h-100">
                                 <div
                                     class="card-body bg-brick-red text-white px-4 pt-9 pb-4 rounded-lg position-relative">
@@ -224,8 +308,7 @@ current: index
                                         style="background-image: url(./assets/images/teacher-1.png);"></div>
                                     <h5 class="card-title mb-3 text-center">Carol Tang 老師</h5>
                                     <h6 class="card-subtitle mb-3 text-center">教學經歷 10 年</h6>
-                                    <h6 class="mb-3">“因為瑜珈讓我重新認識自己的身體，也讓我有了不一樣的人生。 我希望能跟學生們分享瑜珈的好，讓大
-                                        家能藉由瑜珈看見自己的內在與潛能，
+                                    <h6 class="mb-3">“因為瑜珈讓我重新認識自己的身體，也讓我有了不一樣的人生。 我希望能跟學生們分享瑜珈的好，讓大 家能藉由瑜珈看見自己的內在與潛能，
                                         並將瑜珈自然的融入自己的生活中。”</h6>
                                     <ul>
                                         <li class="mb-1">協會認證艾揚格瑜珈老師</li>
@@ -235,8 +318,7 @@ current: index
                                 </div>
                             </div>
                         </div>
-                        <div class="swiper-slide swiper-slide-next" role="group" aria-label="2 / 4"
-                            style="width: 350px; margin-right: 30px;" data-aos="fade-right" data-aos-delay="100">
+                        <div class="col-12 mb-9" data-aos="fade-up">
                             <div class="card border-0 mt-4 h-100">
                                 <div
                                     class="card-body bg-dark-brick-red text-white px-4 pt-9 pb-4 rounded-lg position-relative">
@@ -255,8 +337,7 @@ current: index
                                 </div>
                             </div>
                         </div>
-                        <div class="swiper-slide" role="group" aria-label="3 / 4"
-                            style="width: 350px; margin-right: 30px;" data-aos="fade-right" data-aos-delay="300">
+                        <div class="col-12 mb-9" data-aos="fade-up">
                             <div class="card border-0 mt-4 h-100">
                                 <div
                                     class="card-body bg-brick-red text-white px-4 pt-9 pb-4 rounded-lg position-relative">
@@ -273,8 +354,7 @@ current: index
                                 </div>
                             </div>
                         </div>
-                        <div class="swiper-slide" role="group" aria-label="4 / 4"
-                            style="width: 350px; margin-right: 30px;" data-aos="fade-right" data-aos-delay="400">
+                        <div class="col-12 mb-9" data-aos="fade-up">
                             <div class="card border-0 mt-4 h-100">
                                 <div
                                     class="card-body bg-brick-red text-white px-4 pt-9 pb-4 rounded-lg position-relative">
@@ -293,8 +373,6 @@ current: index
                             </div>
                         </div>
                     </div>
-
-
                 </div>
             </div>
         </div>
@@ -302,14 +380,18 @@ current: index
         <!-- Modal -->
         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered modal-xl modal-dialog-width">
-                <div class="modal-content container-lg py-9 px-8 bg-brick-red rounded-lg">
+                <div class="modal-content container-lg py-6 py-sm-9 px-8 bg-brick-red rounded-lg">
                     <div class="row">
-                        <div class="col-6">
+                        <div class="col-12 col-sm-6">
+                            <div class="d-flex justify-content-end d-sm-none">
+                                <button type="button" class="btn-close mb-3" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
                             <div class="bg-cover rounded-lg w-100"
                                 style="background-image: url(./assets/images/photo-1540206276207-3af25c08abc4.jpeg); height: 418px;">
                             </div>
                         </div>
-                        <div class="col-6 px-3 px-lg-7 py-7">
+                        <div class="col-12 col-sm-6 px-3 px-lg-7 py-7">
                             <h3 class="text-white">基礎 Basic</h3>
                             <div class="d-flex align-items-baseline mb-3">
                                 <h6 class="text-white me-2">授課老師：Carol Tang</h6>
