--- a/app/reserve-class.html
+++ b/app/reserve-class.html
@@ -9,13 +9,13 @@ current: index
 
 <div class="container mb-6">
     <div class="row justify-content-center">
-        <div class="col-3 col-lg-2">
+        <div class="col-4 col-sm-3 col-lg-2">
             <div class="alert bg-dark-brick-red text-white text-center rounded-lg" role="alert">選擇方案</div>
         </div>
-        <div class="col-3 col-lg-2">
+        <div class="col-4 col-sm-3 col-lg-2">
             <div class="alert bg-beige text-dark-brick-red text-center rounded-lg" role="alert">填寫資料</div>
         </div>
-        <div class="col-3 col-lg-2">
+        <div class="col-4 col-sm-3 col-lg-2">
             <div class="alert bg-beige text-dark-brick-red text-center rounded-lg" role="alert">完成預約</div>
         </div>
     </div>
@@ -23,9 +23,9 @@ current: index
 
 <div class="course-select">
     <div class="container">
-        <div class="d-none d-lg-block">
+        <div class="d-block d-sm-none d-lg-block">
             <ul class="list-unstyled row">
-                <li class="col-4" data-aos="fade-up">
+                <li class="col-12 col-sm-4 mb-3 mb-sm-0" data-aos="fade-up">
                     <div class="card rounded-lg course-card">
                         <img class="card-img-top card-img bg-cover d-block"
                             style="background-image: url(./assets/images/woman\ in\ white\ tank\ top\ and\ white\ leggings\ bending\ her\ body.jpg);">
@@ -42,7 +42,7 @@ current: index
                         </div>
                     </div>
                 </li>
-                <li class="col-4" data-aos="fade-up" data-aos-delay="200">
+                <li class="col-12 col-sm-4 mb-3 mb-sm-0" data-aos="fade-up" data-aos-delay="200">
                     <div class="card rounded-lg course-card">
                         <img class="card-img-top card-img bg-cover d-block"
                             style="background-image: url(./assets/images/woman\ performing\ yoga.jpg);">
@@ -59,7 +59,7 @@ current: index
                         </div>
                     </div>
                 </li>
-                <li class="col-4" data-aos="fade-up" data-aos-delay="400">
+                <li class="col-12 col-sm-4 mb-3 mb-sm-0" data-aos="fade-up" data-aos-delay="400">
                     <div class="card rounded-lg course-card">
                         <img class="card-img-top card-img bg-cover d-block"
                             style="background-image: url(./assets/images/woman\ in\ blue\ leggings\ and\ black\ tank\ top\ doing\ yoga.jpg);">
@@ -78,7 +78,7 @@ current: index
                 </li>
             </ul>
         </div>
-        <div class="d-lg-none">
+        <div class="d-none d-sm-block d-lg-none">
             <ul class="list-unstyled row">
                 <li class="col-12">
                     <div class="card mb-4 rounded-lg overflow-hidden">
@@ -156,7 +156,7 @@ current: index
 
 <div class="container text-dark-brick-red" style="margin-bottom: 104px;" data-aos="fade-up">
     <div class="row justify-content-center">
-        <div class="col-8 col-lg-5">
+        <div class="col-12 col-sm-8 col-lg-5">
             <h3 class="text-center mt-6 mb-3">預約須知</h3>
             <ul class="list-unstyled">
                 <li class="mb-1">1. 如果有特殊體質、特殊狀況，請主動告知。</li>
