--- a/app/reserve-success.html
+++ b/app/reserve-success.html
@@ -9,14 +9,14 @@ current: index
 
 <div class="container mb-6">
     <div class="row justify-content-center">
-        <div class="col-3 col-lg-2">
-            <div class="alert bg-dark-brick-red text-white text-center rounded-lg" role="alert">選擇方案</div>
+        <div class="col-4 col-sm-3 col-lg-2">
+            <div class="alert bg-beige text-dark-brick-red text-center rounded-lg" role="alert">選擇方案</div>
         </div>
-        <div class="col-3 col-lg-2">
+        <div class="col-4 col-sm-3 col-lg-2">
             <div class="alert bg-beige text-dark-brick-red text-center rounded-lg" role="alert">填寫資料</div>
         </div>
-        <div class="col-3 col-lg-2">
-            <div class="alert bg-beige text-dark-brick-red text-center rounded-lg" role="alert">完成預約</div>
+        <div class="col-4 col-sm-3 col-lg-2">
+            <div class="alert bg-dark-brick-red text-white text-center rounded-lg" role="alert">完成預約</div>
         </div>
     </div>
 </div>
@@ -26,7 +26,7 @@ current: index
 
 <div class="container">
     <div class="row d-flex justify-content-center">
-        <div class="col-8 col-lg-6">
+        <div class="col-12 col-sm-8 col-lg-6">
             <div class="accordion" id="accordionExample">
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingOne">
@@ -62,7 +62,7 @@ current: index
 
 <div class="container text-dark-brick-red">
     <div class="row d-flex justify-content-center">
-        <div class="col-6 col-lg-4">
+        <div class="col-12 col-sm-6 col-lg-4">
             <h3 class="text-center mt-6 mb-3">上課注意事項</h3>
             <h6 class="mb-6">第一次上課請提前 10-15 分鐘至櫃檯報到，請攜帶毛巾、水 .穿著運動服、乾淨室內運動鞋。 如欲更改體驗時間請提前通知我們喔！</h6>
             <a href="index.html" class="btn btn-dark-brick-red text-white d-block py-2 index-btn">返回首頁</a>
